Fix some layout bugs on mobile

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -6,6 +6,7 @@
 @include mediaLg {
     body {
         overflow-y: visible;
+        max-width: 100vw;
     }
 
     #experience {
@@ -47,7 +48,8 @@
 // Tablets & Small Laptops
 @include mediaMd {
 	body {
-		overflow: visible;
+        overflow-y: visible;
+        max-width: 100vw;
 	}
 
 	body#bg-img {
@@ -147,13 +149,7 @@
 		.about-info {
 			grid-template-areas:
 				'bioimage'
-				'bio'
-				'education-title'
-				'education'
-				'work-title'
-				'job1'
-				'job2'
-				'job3';
+				'bio';
 			grid-template-columns: repeat(1, 1fr);
 			grid-template-rows: auto;
 
@@ -163,14 +159,27 @@
 			}
 
 			.bio {
+                .title-wrap {
+                    transform: translateX(-100vw);
+				    margin-top: 2.5rem;
+                }
+
+                .bio-text {
+                    &-1 {
+                        transform: translateX(-100vw);
+                    }
+
+                    &-2 {
+                        transform: translateX(-100vw);
+                    }
+                }
+                
 				p {
 					padding: 0 1rem;
 				}
 			}
 
-			.title-wrap {
-				margin-top: 2.5rem;
-			}
+
 		}
     }
     
@@ -220,6 +229,11 @@
 
 // Smartphones
 @include mediaSm {
+    body {
+        width: 100vw;
+        overflow-x: hidden;
+    }
+
 	body#bg-img {
 		background-position-x: 1950px;
 	}
@@ -229,7 +243,7 @@
 
 		&#home h1 {
 			// only the home h1 should be down further
-			margin-top: 25vh;
+			margin-top: 15vh;
 		}
 
 		h1 {
@@ -258,12 +272,20 @@
 		.nav-link {
 			font-size: 26px;
 		}
-	}
+    }
+    
+    #home {
+        .sm-heading {
+            font-size: 1.5rem;
+        }
+    }
 
 	#about {
 		margin: 0;
 
 		.about-info {
+            max-width: 80vw;
+
 			.bio-image {
                 margin-top: 1.5rem;
                 max-width: 90vw;
@@ -293,10 +315,6 @@
             h1 {
                 margin-top: 0;
             }
-        }
-
-        .experience-info {
-
         }
     }
 
